--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -51,7 +51,7 @@ jobs:
             steps:
             - name: create release
             uses: actions/create-release@v1
-            evn:
+            env:
               GITHUB_TOKEN: ${{ secrets.github_token }}
               with:
                tag_name: ${{ github.run_number }}
