--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -55,6 +55,22 @@ jobs:
         with:
           tag_name: ${{ github.run_number }}
           release_name: Release from ${{ github.run_number }}
-          body: New release for ${{ github.sha }}. Release note on the documentation site
-          draft: false
-          prerelease: false
+
+
+documentation:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create docs folder
+        run: mkdir docs
+      - name: Convert md to html
+        uses: docker://pandoc/core:2.9
+        with:
+          args: userguide.md -t html -o docs/index.html
+      - name: Deploy Pages site
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: docs
