--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -74,4 +74,9 @@ jobs:
           branch: gh-pages
           folder: docs
 
+name: Deploy Lambda Function
+on:
+  push:
+    paths:
+      - userguide.md
 
