--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -74,9 +74,15 @@ jobs:
           branch: gh-pages
           folder: docs
 
-name: Deploy Lambda Function
-on:
+  name: Deploy Lambda Function
+  on:
   push:
     paths:
       - userguide.md
+      
+    ## User Guide
+    
+__New feature alert!__
+
+  ## Install
 
